crates/biome_cli/tests/snapshots/main_commands_inspect/manifest_unknown_config_selector_is_an_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "extends": ["@shared/config/configs/unknown"] }
```

## `node_modules/@shared/config/biome-manifest.json`

```json
{ "version": 1, "configs": [{ "recommended": "./recommended.json" }] }
```

## `node_modules/@shared/config/package.json`

```json
{
  "name": "@shared/config",
  "exports": { "biome": "./biome-manifest.json" }
}
```

## `node_modules/@shared/config/recommended.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The Biome manifest for @shared/config does not export a configuration named unknown.
  


```
