crates/biome_cli/tests/snapshots/main_commands_inspect/markdown_linter_composite_uses_global_override_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.md"],
      "linter": { "enabled": false }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:3:5 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key markdown.linter has the value {"enabled":false}.
  
    1 │ {
    2 │   "overrides": [
  > 3 │     {
      │     ^
  > 4 │       "includes": ["**/*.md"],
  > 5 │       "linter": { "enabled": false }
  > 6 │     }
      │     ^
    7 │   ]
    8 │ }
  
  i This value is provided by override 0 in the root configuration.
  
  i The override matched file.md using **/*.md.
  

```
