crates/biome_cli/tests/snapshots/main_commands_inspect/matching_override_preserves_group_shorthand.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "rules": { "suspicious": "error" }
  },
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "linter": {
        "rules": {
          "suspicious": { "noDebugger": "off" }
        }
      }
    }
  ]
}
```

# Emitted Messages

```block
{
  "key": "linter.rules.suspicious.noConsole",
  "value": "error",
  "source": {
    "configurationKind": "root",
    "path": "biome.json",
    "range": {
      "end": 52,
      "start": 45
    },
    "scope": "base"
  }
}
```
