crates/biome_cli/tests/snapshots/main_commands_inspect/missing_explicit_configuration_is_an_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
missing.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome couldn't find a configuration in the directory missing.json.
  


```
