crates/biome_cli/tests/snapshots/main_commands_inspect/no_configuration_json_is_empty.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
{}
```
