crates/biome_cli/tests/snapshots/main_commands_inspect/null_value_does_not_replace_extended_provenance.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "extends": ["base.json"],
  "formatter": { "lineWidth": null }
}
```

## `base.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Emitted Messages

```block
{
  "key": "formatter.lineWidth",
  "value": 100,
  "source": {
    "configurationKind": "extend",
    "path": "base.json",
    "range": {
      "end": 33,
      "start": 30
    },
    "scope": "base",
    "specifier": "base.json"
  }
}
```
